--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-03-02    <tromo@spade.biophysics.rochester.edu>
+
+	* Fixed bug in DescendingSort sort predicate causing it to sort
+	ascending.
+
 2010-02-20  Tod Romo  <tromo@gorgoneion-w>
 
 	* Changed contact-time to filter target atoms so that only nearby
