updated changelog to indicate that I actually checked it -- since the commit for order_params.cpp explicitly mentioned I hadn't checked the 1 residue format yet
svn path=/software/LOOS/trunk/; revision=4373

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2010-06-21    <alan@membrane.biophysics.rochester.edu>
 	* Changed order_params to handle both 1- and 3-residue per lipid
-	  formats.
+	  formats. Verified works for new and old CHARMM parameters.
 
 2010-06-02    <tromo@spade.biophysics.rochester.edu>
 
